[package]
name = "vault-recover"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"

[dependencies]
sha2 = "=0.10.8"
hmac = "=0.12.1"
pbkdf2 = { version = "=0.12.2", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"] }
bs58 = { version = "=0.5.1", features = ["check"] }
secp256k1 = { version = "=0.28.2", features = ["recovery"] }
rayon = "=1.8.1"
hex = "0.4"

[dev-dependencies]
hex = "0.4"
